--- a/css/style.default.css
+++ b/css/style.default.css
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   width: auto;
-  background-image: url('../img/Edvard_Munch_Melancholy.jpg');
+  background-image: url('../img/kuindji.jpg');
   /* background-size: 250px; */
   background-repeat: no-repeat;
 }
@@ -24,7 +24,7 @@
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.3;
+  opacity: 0.0;
   filter: alpha(opacity=30);
   z-index: 1;
 }
